--- a/style.css
+++ b/style.css
@@ -49,15 +49,15 @@ html {
   border: 0;
   outline: 0;
   position: relative;
-  font-size : 20px ; 
-  font-weight : 100 ; 
+  font-size: 20px;
+  font-weight: 100;
 }
 
 .main-box button {
   border: 0;
   background: linear-gradient(90deg, #00c6ff, #0072ff);
   border-radius: 10px;
-  z-index : 1 ; 
+  z-index: 1;
 }
 
 .main-box button div {
@@ -69,7 +69,7 @@ html {
   cursor: pointer;
   font-size: 15px;
   font-weight: 900;
-  z-index : 0 ; 
+  z-index: 0;
 }
 
 .main-box input::-webkit-calendar-picker-indicator {
@@ -85,9 +85,8 @@ html {
   background-size: 30px;
 }
 
-
-.result { 
-    display : none ; 
-    margin-left : 10% ; 
-    color : #2E2E2E ; 
+.result {
+  display: none;
+  margin-left: 10%;
+  color: #2e2e2e;
 }
